fix dark mode

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,7 +3,7 @@
   --text-c-1: #4b5563;
 
   // ------ Dark theme
-  --dark-bg-c: #18181a;
+  --dark-bg-c: #1e1e20;
   --dark-main-bg-c: #1e1e20;
   --dark-text-c: #e1e1e1;
   --dark-text-c-1: #d1d1d1;
